# network_flows

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
benchmark/: minCost.sh
data/: instance_with_path.max  negative_weight_cycle.min  negative_weight_cycle.txt  simple_max_flot.max  simple_min_cost.min
data/maxflow/: bigMax.max  instance_1.max  instance_10_20_1000.max  instance_10_20_133.max  instance_10_20_146.max  instance_10_20_165.max  instance_10_20_185.max  instance_10_20_198.max  instance_10_20_211.max  instance_10_20_22.max  instance_10_20_243.max  instance_10_20_248.max  instance_10_20_295.max  instance_10_20_318.max  instance_10_20_332.max  instance_10_20_363.max  instance_10_20_388.max  instance_10_20_4.max  instance_10_20_402.max  instance_10_20_424.max  instance_10_20_447.max  instance_10_20_47.max  instance_10_20_476.max  instance_10_20_493.max  instance_10_20_519.max  instance_10_20_536.max  instance_10_20_552.max  instance_10_20_588.max  instance_10_20_63.max  instance_10_20_662.max  (+20 more)
doc/: class_hierarchy.md  class_hierarchy.txt
exec/: app
generator/: readme
include/: Edge.hpp  Graph.hpp  PLFlows.hpp  PreflowPush.hpp  Structures.hpp  Vertex.hpp  algorithm.hpp  algorithms.hpp  benchmarks.hpp  checker.hpp  parser.hpp  saver.hpp
sol/: maxflow_1  sol_instance_1.max  time_instance_1.max  time_maxFlowTest100v1000e.max
solution/: sol_inst_10000_20000_1.max  sol_inst_10000_20000_1.max.min  sol_inst_10000_20000_7.max  sol_inst_10000_20000_7.max.min  sol_inst_4000_40000_1.max  sol_inst_4000_40000_2.max  sol_inst_4000_40000_3.max  sol_inst_4000_40000_4.max  sol_inst_4000_40000_5.max  sol_inst_4000_8000_1.max  sol_inst_4000_8000_1.max.min  sol_inst_4000_8000_4.max  sol_inst_4000_8000_4.max.min  sol_inst_4000_8000_5.max  sol_inst_4000_8000_5.max.min  sol_inst_4000_8000_8.max  sol_inst_4000_8000_8.max.min  sol_inst_6000_12000_1.max  sol_inst_6000_12000_1.max.min  sol_inst_6000_12000_10.max  sol_inst_6000_12000_10.max.min  sol_inst_6000_12000_4.max  sol_inst_6000_12000_4.max.min  sol_inst_6000_12000_6.max  sol_inst_6000_12000_6.max.min  sol_inst_6000_12000_7.max  sol_inst_6000_12000_7.max.min  sol_inst_6000_12000_8.max  sol_inst_6000_12000_8.max.min  sol_inst_6000_12000_9.max  sol_inst_6000_12000_9.max.min  sol_inst_8000_16000_1.max  sol_inst_8000_16000_1.max.min  sol_inst_8000_16000_5.max  sol_inst_8000_16000_5.max.min  sol_inst_8000_16000_6.max  sol_inst_8000_16000_6.max.min  sol_inst_8000_16000_7.max  sol_inst_8000_16000_7.max.min  sol_inst_8000_16000_8.max  (+59 more)
src/: CMakeLists.txt  Edge.cpp  Graph.cpp  Manipulation.cpp  MaxFlowParser.cpp  MinCostParser.cpp  PLFlows.cpp  PreflowPush.cpp  Structures.cpp  Vertex.cpp  algorithm.cpp  algorithms.cpp  benchmarks.cpp  checker.cpp  main.cpp  parser.cpp  saver.cpp
(+223 files in other folders)
